# sysvisor

./: index.html  package.json  pnpm-lock.yaml  tsconfig.app.json
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/components/: CpuGauge.tsx  DiskList.tsx  MemoryGauge.tsx  NetworkCards.tsx  ProcessTable.tsx  SystemHeader.tsx
src/lib/: utils.ts
