[package]
name = "sysvisor"
version = "0.1.0"
description = "Cross-platform system monitor"
authors = ["Badger"]
license = "MIT"
repository = "https://github.com/xAngryBadger/sysvisor"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.1" }
tauri-plugin-log = "2"
sysinfo = "0.33"
